--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,57 @@
-#img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
-}
 
-#canvas {
-  display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 20px;
+}
+label {
+    font-weight: bold;
+}
+input[type="date"] {
+    padding: 8px;
+    margin: 5px;
+    width: 200px;
+    box-sizing: border-box;
+}
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #498a37;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+h2{
+    color: #498a37;
+}
+#result {
+    margin-top: 30px;
+    font-size: 18px;
+}
+#card{
+    width: 100%;
+    height: 100px;
+    margin: auto;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+table,th,td {
+    border:1px solid black;
+    width: 100%;
+    border-color: #498a37;
+    color: #922f0b;
+}
+.display{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.tablediv{
+    padding-top: 2%;
+    width: 20%;
+}
+.input{
+    padding: 12px;
 }
